--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-galera-enterprise-4 (26.4.13) UNRELEASED; urgency=medium
+galera-4 (26.4.13) UNRELEASED; urgency=medium
 
-  * Galera Enterprise 4 release
+  * Galera 4 release
 
- -- Codership Oy <info@codership.com>  Mon, 04 Jul 2022 15:00:36 +0300
+ -- Codership Oy <info@codership.com>  Mon, 04 Jul 2022 14:56:52 +0300
